(as well as keeping compatibility with older versions).

*****

Getting the docs back to life.

*****

Replaced travis CI with github workflows for automated testing.

*****

Cleaning up the code.
Raise NotImplementedError for PSF optimal photometry routines.

*****

Cleaned up centering.

*****

Cleaned up plots code.

*****

Cleaned up badpix.

*****

Cleaned up pup_model.py

*****

Updated workflow versions.

*****

Updated copyright and version to 0.3.0


*****  Do 28 Mär 2024 11:12:26 CET  *****

Updated setup.py and pyproject.toml.
(Moving most of the configuration options to the latter)

*****

Updated README and docs' index and license.

*****

Split getstarted.rst into install.rst and pup_marker.rst.
Also added top-level section for Dog of the day.
 
*****

Fixed pup entry point in pyproject.toml.


*****  Sat Mar 30 16:14:00 CET 2024  *****

Moved inputs folder to puppies/data.
Renamed data/spitzer/filter to data/spitzer_filters
Renamed data/spitzer/psf to data/spitzer_psf

*****

Fixed bug reinstating puppies.input() from puppies/laika.py file.

*****

Revamped 'pup --day' entry point since the dogperday.com does not
update as frequent as it used to do. Now this command will bring up
a random dog of the day.
If on wants the most recent dog, it should call 'pup --today'.
Added puppies/tools/pup_scrapper.py file, which collects the
dogs of the day and save to a file.
Added puppies/data/dogs_of_the_day.txt file with the dogs of the day.

*****

Updated version to 0.4.0

*****

Updated version to 0.4.0b1 for pypi testing.

*****

Renamed puppies.core.Model() to Laika().
Turned into a proper class, moving the lightcurve_fit() and mcmc()
functions into methods of the class.
Fixed a couple of typos.
Made Laika.summary() method also save the screen output to file.

*****

Renamed Laika.lightcurve_fit() to Laika.bestfit().
Renamed Laika.mcmc() to Laika.retrieval().

*****

Updated logo. Goes into docs and README.md.
